--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "pharaonic/livewire-select2": "^1.1",
         "psr/simple-cache": "1.0",
         "realrashid/sweet-alert": "^5.1",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
