--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "psr/simple-cache": "1.0",
         "realrashid/sweet-alert": "^5.1",
         "simplesoftwareio/simple-qrcode": "^4.2",
+        "spatie/laravel-google-fonts": "^1.2",
         "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
