--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "preview": "vite preview"
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
-        "@vitejs/plugin-vue": "^3.0.1",
+        "@vitejs/plugin-vue": "^3.1.0",
         "autoprefixer": "^10.4.8",
         "axios": "^0.27",
         "bootstrap": "^5.1.3",
