--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "barryvdh/laravel-dompdf": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "khaled.alshamaa/ar-php": "^6.3",
         "laravel/framework": "^9.19",
@@ -18,6 +19,7 @@
         "mediconesystems/livewire-datatables": "^0.9.5",
         "orangehill/iseed": "^3.0",
         "pharaonic/livewire-select2": "^1.1",
+        "phenx/php-svg-lib": "^0.5.0",
         "psr/simple-cache": "1.0",
         "realrashid/sweet-alert": "^5.1",
         "simplesoftwareio/simple-qrcode": "^4.2",
