--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,14 @@
         "livewire/livewire": "^2.10",
         "maatwebsite/excel": "^3.1",
         "mediconesystems/livewire-datatables": "^0.9.5",
+        "mpdf/mpdf": "8.0.13",
+        "niklasravnsborg/laravel-pdf": "^4.1",
         "orangehill/iseed": "^3.0",
         "pharaonic/livewire-select2": "^1.1",
         "phenx/php-svg-lib": "^0.5.0",
         "psr/simple-cache": "1.0",
         "realrashid/sweet-alert": "^5.1",
+        "setasign/fpdi": "^2.3",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/laravel-permission": "^5.5"
     },
