--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=production
 APP_KEY=
 APP_DEBUG=false
-APP_URL=http://manfisto.test
+APP_URL=http://manfisto.tax.gov.sd
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
